cli/tests/testdata/bench/unhandled_rejection.out
Check [WILDCARD]/bench/unhandled_rejection.ts

bench result: ok. 0 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out ([WILDCARD])

error: Uncaught (in promise) Error: rejection
  reject(new Error("rejection"));
         ^
    at [WILDCARD]/bench/unhandled_rejection.ts:2:10
    at new Promise (<anonymous>)
    at [WILDCARD]/bench/unhandled_rejection.ts:1:1
